Added translucent status/nav bars on tablet launch activity

--- a/project/res/layout-sw600dp/fragment_tablet_waypoint.xml
+++ b/project/res/layout-sw600dp/fragment_tablet_waypoint.xml
@@ -13,7 +13,8 @@
         android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/tablet_search_header_height"
-        android:layout_margin="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="?attr/waypointFragmentTopMargin"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:drawableLeft="@drawable/ic_tablet_origin_cancel"
@@ -31,7 +32,7 @@
         android:id="@+id/search_bar_container"
         android:layout_width="@dimen/tablet_search_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
+        android:layout_alignTop="@id/cancel_button"
         android:layout_marginBottom="16dp"
         android:animateLayoutChanges="true"
         android:layout_centerHorizontal="true"
