--- a/project/res/layout/fragment_tablet_launch.xml
+++ b/project/res/layout/fragment_tablet_launch.xml
@@ -50,7 +50,8 @@
         <FrameLayout
             android:id="@+id/tiles_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/extra_navigation_bar_padding"/>
 
     </LinearLayout>
 
