--- a/project/res/values-sw600dp/tablet_themes.xml
+++ b/project/res/values-sw600dp/tablet_themes.xml
@@ -207,8 +207,16 @@
         <item name="android:background">@drawable/tablet_hotel_room_select_button</item>
     </style>
 
-    <style name="V2.Widget.TextView.FlightDetailsHeader">
-        <item name="android:textSize">20sp</item>
+    <style name="V2.Widget.TextView.FlightDetailsHeader" />
+
+    <style name="V2.Widget.TextView.FlightDetailsHeader.Places">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="textStyle">bold</item>
+    </style>
+
+    <style name="V2.Widget.TextView.FlightDetailsHeader.Time">
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">#333</item>
         <item name="textStyle">light</item>
     </style>
