--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -73,4 +73,13 @@
     <!-- adding tvly_hotel_error string id, to avoid errors in Expedia app compilation -->
     <item name="e3_error_hotel_offers_hotel_service_failure_tvly" type="string"/>
 
+    <!-- AirAsiaGo Flight loading screen progress msg textColor -->
+    <item name="flight_list_progress_text_color" type="color"/>
+
+    <!-- AirAsiaGo FLight Loading screen Image-->
+    <item name="search_progress_flight_aag" type="id"/>
+
+    <!-- AirAsiaGo Hotel Loading Screen Image-->
+    <item name="search_progress_image_aag" type="id"/>
+
  </resources>
