--- a/project/res/values-sw600dp/tablet_themes.xml
+++ b/project/res/values-sw600dp/tablet_themes.xml
@@ -199,7 +199,7 @@
     <style name="V2.Widget.TextView.RateButton.AddToTrip">
         <item name="android:text">@string/room_rate_button_add_to_trip</item>
         <item name="android:background">@drawable/tablet_hotel_room_add_button</item>
-        <item name="android:textSize">14dp</item>
+        <item name="android:textSize">@dimen/tablet_flight_details_price_textsize</item>
     </style>
 
     <style name="V2.Widget.TextView.RateButton.SelectRoom">
@@ -210,14 +210,14 @@
     <style name="V2.Widget.TextView.FlightDetailsHeader" />
 
     <style name="V2.Widget.TextView.FlightDetailsHeader.Places">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">#000000</item>
-        <item name="textStyle">bold</item>
+        <item name="android:textSize">@dimen/tablet_flight_details_header_textsize</item>
+        <item name="android:textColor">#333333</item>
+        <item name="textStyle">medium</item>
     </style>
 
     <style name="V2.Widget.TextView.FlightDetailsHeader.Time">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#333</item>
+        <item name="android:textSize">@dimen/tablet_flight_details_header_textsize</item>
+        <item name="android:textColor">#333333</item>
         <item name="textStyle">light</item>
     </style>
 
