Change user name label for support email.
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D583

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -476,5 +476,6 @@
     <attr name="infoContactEmailSubjectString" format="reference|string"/>
 
     <attr name="loadingAirAsiaRoutesString" format="reference|string" />
+    <attr name="emailUserNameString" format="reference|string" />
 
 </resources>
