--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -157,6 +157,7 @@
         <item name="infoContactUsString">@string/contact_expedia_via</item>
         <item name="infoContactEmailSubjectString">@string/contact_expedia_email_subject</item>
         <item name="loadingAirAsiaRoutesString">@string/loading_air_asia_routes</item>
+        <item name="emailUserNameString">@string/email_user_name</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
