Add dev setting to toggle GWallet Endpoint
For testing, it is good to have the ability
to point at live Google Wallet, even if it isn't
a release build.

--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -81,6 +81,7 @@
     <string name="preference_cookie_logging">preference_cookie_logging</string>
     <string name="preference_debug_notify_oom_crash">preference_debug_notify_oom_crash</string>
     <string name="preference_google_wallet_cvv_challenge">preference_google_wallet_cvv_challenge</string>
+    <string name="preference_google_wallet_sandbox">preference_google_wallet_sandbox</string>
     <string name="preference_disable_push_registration">preference_disable_push_registration</string>
     <string name="preference_push_notification_any_flight">preference_push_notification_any_flight</string>
     <string name="preference_force_fs_db_update">preference_force_fs_db_update</string>
