--- a/project/res/layout/snippet_tablet_room_rate_add_select.xml
+++ b/project/res/layout/snippet_tablet_room_rate_add_select.xml
@@ -24,7 +24,7 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="#000000"
-            android:textSize="17sp"
+            android:textSize="@dimen/hotel_details_room_description_text_size"
             app:textStyle="medium" />
 
         <com.expedia.bookings.widget.TextView
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:textColor="#5f6061"
-            android:textSize="15sp"
+            android:textSize="@dimen/hotel_details_bed_type_text_size"
             app:textStyle="light" />
     </LinearLayout>
 
