--- a/project/res/layout/row_suggestion_dropdown.xml
+++ b/project/res/layout/row_suggestion_dropdown.xml
@@ -7,8 +7,8 @@
     android:layout_height="48dp"
     android:layout_marginLeft="2dp"
     android:drawablePadding="3dp"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:gravity="center_vertical"
     android:singleLine="true"
     android:textColor="#f3f3f3"
