--- a/project/res/layout/fragment_hotel_filters.xml
+++ b/project/res/layout/fragment_hotel_filters.xml
@@ -303,6 +303,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
                 android:layout_marginTop="15dp"
+                android:orientation="horizontal"
                 android:visibility="gone" >
 
                 <TextView
