Changed Images for CVV Error Image
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D594

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -485,5 +485,7 @@
     <attr name="singleFlightNotAvailableError" format="string"/>
     <attr name="flightsNotAvailableError" format="string"/>
 
-
+    <!--CVV and CVV Error-->
+    <attr name="cvvDivDrawable" format="reference" />
+    <attr name="cvvDivErrorDrawable" format="reference" />
 </resources>
