Displaying correct dialog message for clear private data
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D610

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -488,4 +488,8 @@
     <!--CVV and CVV Error-->
     <attr name="cvvDivDrawable" format="reference" />
     <attr name="cvvDivErrorDrawable" format="reference" />
+
+    <!-- Clear Private Data Confirmation Msg-->
+    <attr name="clearPrivateDataMsg" format="string"/>
+
 </resources>
