--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -333,6 +333,12 @@
     <attr name="hotelCheckoutLoginButtonText" format="reference|string" />
     <attr name="hotelCheckoutLogoutLogoDrawable" format="reference" />
     <attr name="hotelCheckoutLoginLogoDrawable" format="reference" />
+    <attr name="hotelCheckoutLoginButtonDrawable" format="reference" />
+
+    <!-- Hotel/Flight confirmation screen, login button colors -->
+    <attr name="hotelCheckoutLoginButtonTextColor" format="reference|color" />
+    <attr name="flightCheckoutLoginButtonTextColor" format="reference|color" />
+    <attr name="tabletCheckoutLoginButtonTextColor" format="reference|color" />
 
     <!-- HotelCheckout CVV, Book button -->
     <attr name="cvvBookButtonKeypadDrawable" format="reference" />
