--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -128,6 +128,10 @@
         <item name="hotelCheckoutLogoutLogoDrawable">@drawable/ic_expedia_logo</item>
         <item name="hotelCheckoutLoginLogoDrawable">@drawable/ic_log_in</item>
         <item name="hotelCheckoutLoginButtonText">@string/Log_in_with_Expedia</item>
+        <item name="hotelCheckoutLoginButtonDrawable">@drawable/btn_login_hotels</item>
+        <item name="hotelCheckoutLoginButtonTextColor">@color/login_text_hotels</item>
+        <item name="flightCheckoutLoginButtonTextColor">@color/login_text_flight</item>
+        <item name="tabletCheckoutLoginButtonTextColor">@color/login_text_tablet</item>
         <item name="cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book</item>
         <item name="hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_expedia_white_logo_small</item>
         <item name="hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale</item>
