Hotels Search text Via Attribute for AAG , Expedia, Trevolocity and changes on text as per POS
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D619

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -498,4 +498,9 @@
     <!-- Clear Private Data Confirmation Msg-->
     <attr name="clearPrivateDataMsg" format="string"/>
 
+    <!--Hotel search result messages-->
+    <attr name="hotelSearchResultNotAvailale" format="reference|string" />
+    <attr name="hotelSearchResultSoldOut" format="reference|string" />
+    <attr name="hotelSearchResultTEMPLATE" format="reference|string" />
+
 </resources>
