--- a/project/res/layout/airasia.xml
+++ b/project/res/layout/airasia.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="130dp"
             android:alpha="0.7"
             android:gravity="center"
-            android:text="search"
+            android:text="@string/search"
             android:textColor="@android:color/white" />
 
 
