--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -170,6 +170,9 @@
         <item name="cvvDivDrawable">@drawable/div_cvv</item>
         <item name="cvvDivErrorDrawable">@drawable/div_cvv_error</item>
         <item name="clearPrivateDataMsg">@string/dialog_message_logged_out_and_cleared_private_data</item>
+        <item name="hotelSearchResultNotAvailale">@string/not_currently_available</item>
+        <item name="hotelSearchResultSoldOut">@string/sold_out_on_expedia</item>
+        <item name="hotelSearchResultTEMPLATE">@string/not_currently_available_TEMPLATE</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
