Changing AAG fetching itins candycane.
Summary: Creating a new attribute to get the drawable resource.

Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D621

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -503,4 +503,5 @@
     <attr name="hotelSearchResultSoldOut" format="reference|string" />
     <attr name="hotelSearchResultTEMPLATE" format="reference|string" />
 
+    <attr name="candycaneProgressDrawable" format="reference" />
 </resources>
