--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -227,6 +227,7 @@
         <item name="itinFlightsTripLineColor">@color/itin_flight_line_color</item>
         <item name="itinHotelAttachButtonDrawable">@drawable/btn_hotel_attach</item>
         <item name="itinDismissListSelectorDrawable">@drawable/list_selector_holo_dark</item>
+        <item name="candycaneProgressDrawable">@drawable/progressbar_candycane_horizontal</item>
     </style>
 
     <style name="ItineraryTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
