Fixing styles for coupon dialog and user review ratings.
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D625

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -469,4 +469,5 @@
     <attr name="itinTabletCardPopupBackgroundDrawable" format="reference"/>
     <attr name="itinTabletCardPopupHeaderDrawable" format="reference"/>
 
+    <attr name="userRatingBarDrawable" format="reference" />
 </resources>
