--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1022,4 +1022,25 @@
         <item name="android:textColor">#444444</item>
     </style>
 
+    <!-- RatingBar styling copied from tablet theme-->
+
+    <style name="V2.Widget.RatingBar" />
+
+    <style name="V2.Widget.RatingBar.UserReview">
+        <item name="android:minHeight">10dp</item>
+        <item name="android:maxHeight">10dp</item>
+    </style>
+
+    <style name="V2.Widget.RatingBar.UserReview.Yellow">
+        <item name="android:progressDrawable">?attr/userRatingBarDrawable</item>
+    </style>
+
+    <!-- Dialog styles copied from tablet theme-->
+
+    <style name="V2.Dialog" parent="@android:style/Theme.Holo.Dialog" />
+
+    <style name="V2.Dialog.Coupon" />
+
+    <style name="V2.Dialog.Coupon.Phone" />
+
 </resources>
