Fixing styles for coupon dialog and user review ratings.
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D625

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -504,4 +504,5 @@
     <attr name="hotelSearchResultTEMPLATE" format="reference|string" />
 
     <attr name="candycaneProgressDrawable" format="reference" />
+    <attr name="userRatingBarDrawable" format="reference" />
 </resources>
