--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -173,6 +173,7 @@
         <item name="hotelSearchResultNotAvailale">@string/not_currently_available</item>
         <item name="hotelSearchResultSoldOut">@string/sold_out_on_expedia</item>
         <item name="hotelSearchResultTEMPLATE">@string/not_currently_available_TEMPLATE</item>
+        <item name="userRatingBarDrawable">@drawable/ratingbar_userreview_flat_yellow</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
