--- a/project/res/layout-sw600dp/fragment_tablet_hotel_details.xml
+++ b/project/res/layout-sw600dp/fragment_tablet_hotel_details.xml
@@ -328,8 +328,8 @@
                     android:gravity="center"
                     android:ellipsize="end"
                     android:includeFontPadding="false"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
+                    android:paddingLeft="@dimen/hotel_details_callout_text_margin_x"
+                    android:paddingRight="@dimen/hotel_details_callout_text_margin_x"
                     android:singleLine="true"
                     android:textColor="#ffffff"
                     android:textSize="20sp"
