--- a/project/res/layout/fragment_tablet_hotel_gallery.xml
+++ b/project/res/layout/fragment_tablet_hotel_gallery.xml
@@ -48,6 +48,9 @@
                 android:id="@+id/photos_for_hotel_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:paddingRight="12dp"
+                android:singleLine="true"
                 android:textColor="#ffffff"
                 android:textSize="18dp"
                 app:textStyle="condensed" />
