adding new image for cross symbol
Summary: showing a white cross-mark in the search editText for AAG

Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D629

--- a/project/res/layout/actionbar_search_hotels.xml
+++ b/project/res/layout/actionbar_search_hotels.xml
@@ -31,7 +31,7 @@
         android:layout_centerVertical="true"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:src="@drawable/ic_clear_edittext_dark"
+        android:src="?attr/clearEditTextImage"
         android:visibility="gone" />
 
     <RelativeLayout
