--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -82,4 +82,6 @@
     <!-- adding aag_hotel_error string id, to avoid errors in Expedia app compilation -->
     <item name="e3_error_hotel_offers_hotel_service_failure_aag" type="string"/>
 
+    <item name="ic_clear_edittext_aag" type="drawable"/>
+
 </resources>
