Itin theme and asset changes for AAG
Summary: Home page flight icon,hotel and flight icon on itinerary,
placeholder for hotels on itinerary changes for AAG

Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -507,4 +507,8 @@
     <attr name="userRatingBarDrawable" format="reference" />
 
     <attr name="clearEditTextImage" format="reference"/>
+
+    <attr name="icTypeCircleFlight" format="reference" />
+    <attr name="icTypeCircleHotel" format="reference" />
+
 </resources>
