Checkout checkmark icon for aag
Summary: Login button style changes for aag

Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D633

--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -175,6 +175,7 @@
         <item name="hotelSearchResultTEMPLATE">@string/not_currently_available_TEMPLATE</item>
         <item name="userRatingBarDrawable">@drawable/ratingbar_userreview_flat_yellow</item>
         <item name="clearEditTextImage">@drawable/ic_clear_edittext_dark</item>
+        <item name="icCheckoutCheckmarkDrawable">@drawable/ic_checkout_checkmark</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
