--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -511,4 +511,5 @@
     <attr name="icTypeCircleFlight" format="reference" />
     <attr name="icTypeCircleHotel" format="reference" />
 
+    <attr name="icCheckoutCheckmarkDrawable" format="reference" />
 </resources>
