--- a/project/res/menu/menu_debug.xml
+++ b/project/res/menu/menu_debug.xml
@@ -9,4 +9,8 @@
         android:icon="@android:drawable/ic_menu_info_details"
         android:id="@+id/debug_menu_build_number"
         android:title="@string/build_number" />
+    <item
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:id="@+id/debug_menu_git_hash"
+        android:title="hash" />
 </menu>
